--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "images": "^3.0.1",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "minimist": ">=0.2.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
